test/neg/bug86.scala
trait Foo();

object foo {
  new Foo();
  new Foo(){};
  new Foo(){0};
}
